--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-My Page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Farmshots Frontend Task</title>
+	<link rel="stylesheet" href="index.css">
+	<!--[if IE]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.min.js"></script>
+    <script src="http://openlayers.org/api/OpenLayers.js"></script>
+</head>
 
+<body id="home">
+      <div id="map"></div>
+      <script src="index.js"></script>
+</body>
+</html>
