done w/ basic functionality...?

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body id="home">
       <div id="map"></div>
-      <div id="images"></div>
+      <div id="images"><img src="" /><img src="" /><img src="" /><img src="" /><img src="" /></div>
       <div id="controls" class="card-panel">
       <h5> Layers </h5>
       <form id="toggles">
@@ -30,7 +30,7 @@
       	<input type="checkbox" name="layers" value="temperature" id="temperature"checked /><label for="temperature">Temperature </label>
       </form>
       <br />
-      <a href="#" class="waves-effect waves-light btn" id="toggle_pics">Image View</a>
+      <a href="#" class="waves-effect waves-light btn" id="toggle_pics"><span>Image View</span><span style="display: none;">Map View</span></a>
       </div>
       <script src="index.js"></script>
 </body>
