--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"> 	
 	<link rel="stylesheet" type="text/css" href="http://openlayers.org/en/v3.12.1/css/ol.css">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="css/index.css">
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -32,6 +32,6 @@
       <br />
       <a href="#" class="waves-effect waves-light btn" id="toggle_pics"><span>Image View</span><span style="display: none;">Map View</span></a>
       </div>
-      <script src="index.js"></script>
+      <script src="js/index.js"></script>
 </body>
 </html>
